<resources>

    <!--Common strings which are used in multiple activities-->
    <string name="app_name">Mrgs Management App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create New Account?</string>
    <string name="login">Login</string>
    <string name="cont_disc">Logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="planner">Planning</string>
    <string name="about_us_how_to">How to use about us</string>
    <string name="todolist">To Do List</string>
    <string name="logo">Logo</string>

    <!--These strings are used in forgot password section of my application-->
    <string name="forgot_password_info">
        Forgot your password? Do not worry! Please enter your email address below!
    </string>
    <string name="forgot_password_info_2">
        We will send you a reset password link and you could simply click it to change your password!
    </string>
    <string name="reset_password">Reset Password</string>

    <!--These strings are used in todolist section of my application-->
    <string name="update_task">Update your task</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="date">Date</string>
    <string name="new_task">Add a new task</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!--These strings are also used in todolist section (todolist fragment) of my application-->
    <string name="to_do_help_1">1) You can simply tap on the floating button on bottom right of the screen to add a new task.</string>
    <string name="to_do_help_2">2) You can enter your task and description in task and description fields.</string>
    <string name="to_do_help_3">3) Then you can either save your task or cancel your task.</string>
    <string name="to_do_help_4">4) If you want, you could later edit or delete your task! This will help you manage your time well.</string>
    <string name="to_do_help_5">5) You can start this simply by clicking on the button below. This button will redirect you to your to do lists.</string>
    <string name="to_do_how_to">How to use To do list.</string>

    <!--These strings are used in planner section of my application-->
    <string name="backward"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="weekly">Weekly</string>
    <string name="new_event">New Event</string>
    <string name="name_of_the_event">Name of the event:</string>
    <string name="event">Event</string>
    <string name="time">Select Time</string>
    <string name="one">1</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>

    <!--These strings are also used in planner section (planner fragment) of my application-->
    <string name="planner_how_to">How to use planner.</string>
    <string name="planner_help_1">1) Once you click on the planning button below, it will direct you to a calendar.</string>
    <string name="planner_help_2">2) On this calendar, you can choose the date you want to add an event.</string>
    <string name="planner_help_3">3) You can click on the arrow keys to switch between months. Once you have chosen the date, you can click on weekly button in top center which takes you to weekly calendar.</string>
    <string name="planner_help_4">4) This weekly calendar can be used similarly to switch between weeks. You can click on new event button which takes you to a new page where you can add an event.</string>
    <string name="planner_help_5">5) Once you have named your event, you can simply choose time and click save.</string>

    <!--These strings are used in about us section (about us activity) of my application-->
    <string name="about_info">Our social media websites you could check out.</string>
    <string name="school_info">Hello there! This is our school website. Just click on our sursum logo and it will direct you to our school website.</string>
    <string name="kamar_info">This is our kamar portal where you can always check your results and pathways. Click on the logo to go to kamar login.</string>
    <string name="nzqa_info">This is NZQA website. It will direct you to nzqa login where senior students can check their grades.</string>

    <!--These strings are also used in about us section (about us fragment) of my application-->
    <string name="about_us">About us</string>
    <string name="about_help_1">1) When the about us button is clicked, a new page opens where you can find several ways to contact us.</string>
    <string name="about_help_2">2) When one of those logo is clicked, it takes you to our page where you can find different things.</string>
    <string name="about_help_3">3) This first link takes you to MRGS website.</string>
    <string name="about_help_4">4) This second link takes you to Kamar Portal.</string>
    <string name="about_help_5">5) This third link takes you to nzqa website.</string>
    <string name="about_help_6">6) The bottom ones are our social media where you can contact us.</string>
    <string name="copyright">© 2021 | Designed by Ausaaf Mohammed</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="book_cover">Book Cover</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="status">Status</string>
</resources>