<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/TV_how_to_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/to_do_how_to"
        android:textAllCaps="true"
        android:fontFamily="@font/playfair_display_bold"
        android:textAlignment="center"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginTop="5dp">
    </TextView>

    <TextView
        android:id="@+id/TV_how_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_how_to_use"
        android:textColor="@color/black"
        android:text="@string/to_do_help_1"
        android:textAlignment="center"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginTop="10dp">
    </TextView>

    <TextView
        android:id="@+id/TV_how_to_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@+id/TV_how_to"
        android:layout_marginTop="10dp"
        android:text="@string/to_do_help_2"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerInParent="true">
    </TextView>

    <TextView
        android:id="@+id/TV_how_to_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@+id/TV_how_to_2"
        android:layout_marginTop="10dp"
        android:text="@string/to_do_help_3"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerInParent="true">
    </TextView>

    <TextView
        android:id="@+id/TV_how_to_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@+id/TV_how_to_3"
        android:layout_marginTop="10dp"
        android:text="@string/to_do_help_4"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerInParent="true">
    </TextView>

    <TextView
        android:id="@+id/TV_how_to_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@+id/TV_how_to_4"
        android:layout_marginTop="10dp"
        android:text="@string/to_do_help_5"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerInParent="true">
    </TextView>

    <Button
        android:id="@+id/btn_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_how_to_5"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="@string/todolist"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>