<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity"
    android:background="@drawable/gradient_bg">

    <ImageView
        android:id="@+id/book_cover"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/assassins_blade"
        android:adjustViewBounds="true"
        android:contentDescription="@string/book_cover"/>

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:lines="2"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/author"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/author"
        android:textColor="@color/darkGray"
        android:textSize="18sp"
        android:lines="1" />

    <TextView
        android:id="@+id/status"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:lines="1"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/description"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>