<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventEditActivity"
    android:background="@drawable/gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/name_of_the_event"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/eventNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/eventDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/eventTimeTV"
        android:onClick="popTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/time"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textStyle="bold"
        android:onClick="saveEventAction"
        android:layout_gravity="center"
        android:textSize="20sp"
        tools:ignore="OnClick" />

</LinearLayout>