<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/book_cover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/assassins_blade"
                android:adjustViewBounds="true"
                android:contentDescription="@string/book_cover"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:lines="2"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/author"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:lines="1" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:lines="2"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>