<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeekViewActivity"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <!--    <Button-->
    <!--        android:id="@+id/Return2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="64dp"-->
    <!--        android:text="@string/return2"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:orientation="vertical">-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/backward"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textStyle="bold"
            android:onClick="previousWeekAction"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_weight="2"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@color/black"
            android:gravity="center"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forward"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textStyle="bold"
            android:onClick="nextWeekAction"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SUN"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="MON"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TUE"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="WED"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="THUR"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="FRI"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SAT"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_event"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:onClick="newEventAction"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

</LinearLayout>
